@@ -35,8 +35,11 @@
  */
 class Tx_Sphinx_Utility_SphinxQuickstart {
 
+	/** @var string */
+	protected static $extKey = 'sphinx';
+
 	/**
-	 * Creates a empty Sphinx project.
+	 * Creates an empty Sphinx project.
 	 *
 	 * @param string $pathRoot
 	 * @param string $projectName
@@ -44,13 +47,9 @@ class Tx_Sphinx_Utility_SphinxQuickstart {
 	 * @param boolean $separateSourceBuild
 	 * @return boolean
 	 */
-	public function createProject(
-		$pathRoot,
-		$projectName,
-		$author,
-		$separateSourceBuild = FALSE
-	) {
+	public function createProject($pathRoot, $projectName, $author, $separateSourceBuild = FALSE) {
 		$projectName = str_replace("'", ' ', $projectName);
+		$author = str_replace("'", ' ', $author);
 
 		// Inside the root directory, two more directories will be created; "_templates"
 		// for custom HTML templates and "_static" for custom stylesheets and other static
@@ -86,8 +85,9 @@ class Tx_Sphinx_Utility_SphinxQuickstart {
 			);
 			$files = array(
 				'conf.py' => 'source/conf.py',
-				'index'   => 'source/' . $masterDocument . $sourceFileSuffix,
+				'master'  => 'source/' . $masterDocument . $sourceFileSuffix,
 			);
+			$excludePattern = '';
 		} else {
 			$directories = array(
 				$namePrefixTemplatesStatic . 'static/',
@@ -96,7 +96,7 @@ class Tx_Sphinx_Utility_SphinxQuickstart {
 			);
 			$files = array(
 				'conf.py' => 'conf.py',
-				'index'   => $masterDocument . $sourceFileSuffix,
+				'master'  => $masterDocument . $sourceFileSuffix,
 			);
 			$excludePattern = '_build';
 		}
@@ -104,102 +104,31 @@ class Tx_Sphinx_Utility_SphinxQuickstart {
 			\TYPO3\CMS\Core\Utility\GeneralUtility::mkdir_deep($pathRoot . $directory);
 		}
 
-		$now = date('r');
-		$year = date('Y');
-		$index = <<<EOT
-.. $projectName documentation master file, created by
-   TYPO3 extension sphinx on $now.
-   You can adapt this file completely to your liking, but it should at least
-   contain the root `toctree` directive.
+		/** @var \TYPO3\CMS\Frontend\ContentObject\ContentObjectRenderer $contentObj */
+		$contentObj = \TYPO3\CMS\Core\Utility\GeneralUtility::makeInstance('TYPO3\\CMS\\Frontend\\ContentObject\\ContentObjectRenderer');
 
-Welcome to $projectName's documentation!
-=============================================================
+		$markers = array(
+			'PROJECT_NAME'       => $projectName,
+			'AUTHOR'             => $author,
+			'VERSION'            => $version,
+			'RELEASE'            => $release,
+			'CURRENT_DATE'       => date('r'),
+			'YEAR'               => date('Y'),
+			'MASTER_DOCUMENT'    => $masterDocument,
+			'PATH_TEMPLATES'     => $namePrefixTemplatesStatic . 'templates',
+			'PATH_STATIC'        => $namePrefixTemplatesStatic . 'static',
+			'SOURCE_FILE_SUFFIX' => $sourceFileSuffix,
+			'EXCLUDE_PATTERN'    => $excludePattern,
+		);
 
-Contents:
+		$templateMaster = \TYPO3\CMS\Core\Utility\ExtensionManagementUtility::extPath(self::$extKey) . 'Resources/Private/Templates/BlankProject/MasterDocument.rst.tmpl';
+		$template = file_get_contents($templateMaster);
+		$master = $contentObj->substituteMarkerArray($template, $markers, '###|###');
+		\TYPO3\CMS\Core\Utility\GeneralUtility::writeFile($pathRoot . $files['master'], $master);
 
-.. toctree::
-   :maxdepth: 2
-
-
-
-Indices and tables
-==================
-
-* :ref:`genindex`
-* :ref:`modindex`
-* :ref:`search`
-EOT;
-
-		\TYPO3\CMS\Core\Utility\GeneralUtility::writeFile($pathRoot . $files['index'], $index);
-
-		$conf = <<<EOT
-# -*- coding: utf-8 -*-
-#
-# $projectName documentation build configuration file
-
-import sys, os
-
-# -- General configuration -----------------------------------------------------
-
-# Add any Sphinx extension module names here, as strings. They can be extensions
-# coming with Sphinx (named 'sphinx.ext.*') or your custom ones.
-extensions = []
-
-# Add any paths that contain templates here, relative to this directory.
-templates_path = ['{$namePrefixTemplatesStatic}templates']
-
-# The suffix of source filenames.
-source_suffix = '$sourceFileSuffix'
-
-# The encoding of source files.
-#source_encoding = 'utf-8-sig'
-
-# The master toctree document.
-master_doc = '$masterDocument'
-
-# General information about the project.
-project = u'$projectName'
-copyright = u'$year, $author'
-
-# The version info for the project you're documenting, acts as replacement for
-# |version| and |release|, also used in various other places throughout the
-# built documents.
-#
-# The short X.Y version.
-version = '$version'
-# The full version, including alpha/beta/rc tags.
-release = '$release'
-
-# The language for content autogenerated by Sphinx. Refer to documentation
-# for a list of supported languages.
-#language = None
-
-# There are two options for replacing |today|: either, you set today to some
-# non-false value, then it is used:
-#today = ''
-# Else, today_fmt is used as the format for a strftime call.
-#today_fmt = '%B %d, %Y'
-
-# List of patterns, relative to source directory, that match files and
-# directories to ignore when looking for source files.
-exclude_patterns = ['$excludePattern']
-
-# The name of the Pygments (syntax highlighting) style to use.
-pygments_style = 'sphinx'
-
-
-# -- Options for HTML output ---------------------------------------------------
-
-# The theme to use for HTML and HTML Help pages.  See the documentation for
-# a list of builtin themes.
-html_theme = 'default'
-
-# Add any paths that contain custom static files (such as style sheets) here,
-# relative to this directory. They are copied after the builtin static files,
-# so a file named "default.css" will overwrite the builtin "default.css".
-html_static_path = ['{$namePrefixTemplatesStatic}static']
-EOT;
-
+		$templateConfPy = \TYPO3\CMS\Core\Utility\ExtensionManagementUtility::extPath(self::$extKey) . 'Resources/Private/Templates/BlankProject/conf.py.tmpl';
+		$template = file_get_contents($templateConfPy);
+		$conf = $contentObj->substituteMarkerArray($template, $markers, '###|###');
 		\TYPO3\CMS\Core\Utility\GeneralUtility::writeFile($pathRoot . $files['conf.py'], $conf);
 
 		return TRUE;
