@@ -1,0 +1,21 @@
+.. ###PROJECT_NAME### documentation master file, created by
+   TYPO3 extension sphinx on ###CURRENT_DATE###.
+   You can adapt this file completely to your liking, but it should at least
+   contain the root `toctree` directive.
+
+Welcome to ###PROJECT_NAME###'s documentation!
+=============================================================
+
+Contents:
+
+.. toctree::
+   :maxdepth: 2
+
+
+
+Indices and tables
+==================
+
+* :ref:`genindex`
+* :ref:`modindex`
+* :ref:`search`
